feat: add inventory datamart and OLAP model (#10)
